# note_python

./: README.md  requiremenets.txt
3QVeryMuch/: README.md  requirements.txt
Acoustic_Signal/: README.md  basic_waveforms.py
Algorithm_DataStructure/: README.md
Android/: README.md
Apx/: README.md
Audacity/: README.md
Audio_File_Format/: Pyqt_Qsound.py  Pyqt_dB_gui.py  Pyqt_dB_play.py  README.md  extract-length-with-mutagen.py  pyqt-palette-and-stylesheet.py
AutoTest_VPNClient_Windows/: README.md
AutoTest_WiFi_Router_Throughput/: README.md
CSV/: README.md
Chart_Trend/: README.md  requirements.txt
Chiron/: README.md  requirements.txt
Chromebook/: README.md
DHCPTest/: README.md
Dash/: README.md  requirements.txt
DeepLearning/: README.md
Flent/: README.md
Get_IP/: README.md
GitHub/: README.md  requirements.txt
HACS/: README.md  config_example.json  requirement.txt  test_tapo_p105.py
HTTP_Signatures/: README.md  test.py
ICMP_Ping_Traceroute/: README.md
IR_Remote_Control/: README.md  debug.py  discover.py
JSON/: README.md
Linux_Ubuntu/: README.md
M$_Onedrive/: README.md
MD5_SHA/: README.md
MQTT/: README.md
Matplotlib/: README.md  test_font.py
NLP_自然言語処理/: README.md
Nessus/: README.md
Nmap_Stuff/: README.md
NmaptoCSV/: README.md
Numpy/: README.md
Oauth/: README.md
Ostinato/: README.md
Pholus/: README.md  pholus.py
Playwright/: README.md
Poetry/: README.md
Poetry/huggingface_tutorial/: hf_pipeline.py  pyproject.toml
PyQt5/: PyQt_logger02.py  PyQt_logger03.py  README.md  main.py  mainqt.ui  test_main.py
(+431 files in other folders)
